fixed scrolling issue on mobile

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,7 +8,8 @@
 
 body {
   background: white;
-  overflow: hidden;
+  overflow: auto;
+  width: 99%;
   margin: 0;
 }
  
